[package]
name = "server_ring"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
rand = "0.8.5"
async-std = "1.10"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
raft = { path = "../db/raft" }
dbshared = { path = "../db/shared" }
libclient = { path = "../db/libclient" }